--- a/index.html
+++ b/index.html
@@ -142,12 +142,11 @@
                   <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="University of Cyprus Logo">
                 </a>
               </p>
-              <div class="resume-show-more">
-                <button class="icon" onclick="resumeShow(this);"><i class="bi bi-chevron-down"></i></button>
-                <p><u>Topic:</u> Populated Virtual Environments</p>
-                <p><u>Lab:</u> UCY Graphics Lab</p>
-                <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
-              </div>
+              <details>
+                <summary class="show-more-summary">Details</summary>
+                    <p><u>Topic:</u> Populated Virtual Environments</p>
+                    <p><u>Lab:</u> UCY Graphics Lab</p>
+              </details>
             </div>
             <div class="resume-item">
               <h4>Master of Science (M.Sc) Computer Science</h4>
@@ -158,12 +157,11 @@
                   <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="University of Cyprus Logo">
                 </a>
               </p>
-              <div class="resume-show-more">
-                <button class="icon" onclick="resumeShow(this);"><i class="bi bi-chevron-down"></i></button>
+              <details>
+                <summary class="show-more-summary">Details</summary>
                 <p><u>Courses:</u> Modern Technical Analysis of Large Scale Graphs, Distributed Systems, Visual Computing, Video Game Software Development, Cognitive Programming, Advanced Software Engineering, Electronic Health</p>
                 <p><u>Thesis:</u> Crowd simulation by Deep Reinforcement Learning - <a href="assets/files/Andreas_Panayiotou_Master_Thesis.pdf" target="_blank">Available Here</a></p>
-                <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
-              </div>
+              </details>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Science (B.Sc) Computer Science</h4>
@@ -174,12 +172,11 @@
                   <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="University of Cyprus Logo">
                 </a>
               </p>
-              <div class="resume-show-more">
-                <button class="icon" onclick="resumeShow(this);"><i class="bi bi-chevron-down"></i></button>
+              <details>
+                <summary class="show-more-summary">Details</summary>
                 <p><u>Elective Courses:</u> Synthesis of Parallel Algorithms, Computational Intelligent Systems, Logic in Computer Science, Advanced Networks, Network and Information Security, Internet Technologies</p>
                 <p><u>Thesis:</u> Shift scheduling software and mobile application for Ambulance Service Cyprus</p>
-                <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
-              </div>
+              </details>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-left">
@@ -193,16 +190,15 @@
                   <img src="assets/img/cyens.png" width="25px" style="margin-left: 5px;" class="cyensLogo img-fluid" alt=alt="CYENS Logo">
                 </a>
               </p>
-              <div class="resume-show-more">
-                <button class="icon" onclick="resumeShow(this);"><i class="bi bi-chevron-down"></i></button>
+              <details>
+                <summary class="show-more-summary">Details</summary>
                 <ul>
                   <li>Computer Graphics</li>
                   <li>Crowd Simulation</li>
                   <li>Machine Learning</li>
                   <li>Game Technologies</li>
                 </ul>
-                <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
-              </div>
+              </details>
             </div>
             <div class="resume-item">
               <h4>Research Intern</h4>
@@ -213,15 +209,14 @@
                   <img src="assets/img/cyens.png" width="25px" style="margin-left: 5px;" class="cyensLogo img-fluid" alt="CYENS Logo">
                 </a>
               </p>
-              <div class="resume-show-more">
-                <button class="icon" onclick="resumeShow(this);"><i class="bi bi-chevron-down"></i></button>
+              <details>
+                <summary class="show-more-summary">Details</summary>
                 <ul>
                   <li>Unity | ML-Agents Toolkit</li>
                   <li>Training of agents using Imitation and Reinforcement Learning</li>
                   <li>Character Animation</li>
                 </ul>
-                <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
-              </div>
+              </details>
             </div>
             <div class="resume-item">
               <h4>Information Technology Trainee</h4>
@@ -232,16 +227,15 @@
                   <img src="assets/img/bsm.png" width="35px" style="margin-left: 5px;" class="img-fluid" alt="Bernhard Schulte Shipmanagement Logo">
                 </a>
               </p>
-              <div class="resume-show-more">
-                <button class="icon" onclick="resumeShow(this);"><i class="bi bi-chevron-down"></i></button>
+              <details>
+                <summary class="show-more-summary">Details</summary>
                 <ul>
                   <li>Support company core network</li>
                   <li>Provide technical support to employees</li>
                   <li>Communicate with international company partners to learn the use of maritime softwares</li>
                   <li>Upgrade and repair of computer hardware</li>
                 </ul>
-                <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
-              </div>
+              </details>
             </div>
           </div>
         </div>
