--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Short Bio</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Publications</span></a></li>
+        <li><a href="#publications" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Publications</span></a></li>
+        <li><a href="#projects" class="nav-link scrollto"><i class="bx bx-briefcase"></i> <span>Projects</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -95,7 +96,7 @@
           </div>
           <div class="col-lg-9 col-sm-8 content">
             <p style="text-align: justify; font-weight: 400;">
-              Hello. I am Andreas and I was born in Limassol, a beautiful city in Cyprus. Currently, I am a <b>PhD student</b> at <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">University of Cyprus</a> and a <b>research associate</b> at <a href="https://www.cyens.org.cy/" target="_blank">CYENS - Center of Excellence</a>. In 2022, I received my M.Sc in Computer Science from University of Cyprus, while also
+              Hey. I am Andreas and I was born in Limassol, a beautiful city in Cyprus. Currently, I am a <b>PhD student</b> at <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">University of Cyprus</a> and a <b>research associate</b> at <a href="https://www.cyens.org.cy/" target="_blank">CYENS - Center of Excellence</a>. In 2022, I received my M.Sc in Computer Science from University of Cyprus, while also
               I hold a B.Sc in Computer Science from the same university.
               My interests include, but not limited to, Crowd Simulation, Machine Learning, Virtual Environments, Computer Animation and Computer Games Technologies.
             </p>
@@ -237,13 +238,13 @@
                 </ul>
               </details>
             </div>
-          </div>
+          </div>do whaservi
         </div>
 
       </div>
     </section><!-- End Resume Section -->
-    <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!-- ======= publications Section ======= -->
+    <section id="publications" class="publications">
       <div class="container" data-aos="fade">
 
         <div class="section-title">
@@ -255,14 +256,14 @@
         <div class="row">
           <div class="col-12 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
             <div class="icon-box iconbox-blue">
-              <h5><a href="https://doi.org/10.1145/3528233.3530712" target="_blank" style="    font-weight: 600;margin-right: 10px;">CCP: Configurable Crowd Profiles</a></h5>              
+              <h5><a href="https://doi.org/10.1145/3528233.3530712" target="_blank" style="font-weight: 600;margin-right: 10px;">CCP: Configurable Crowd Profiles</a></h5>              
               <p style="text-align: justify;"><strong>Andreas Panayiotou</strong>, Theodoros Kyriakou, Marilena Lemonari, Yiorgos Chrysanthou, and Panayiotis Charalambous</p>
               <p style="margin-bottom: 5px;"><i>In Special Interest Group on Computer Graphics and Interactive Techniques Conference Proceedings (SIGGRAPH ’22 Conference Proceedings)</i></p>
               <div class="row">
-                <div class="col-lg-2 col-md-3 col-12" style="margin-bottom: 5px;">
+                <div class="col-lg-2 col-md-3 col-3" style="margin-bottom: 5px;">
                   <img class="img-fluid paperImg" src="assets/img/ccp.jpg" alt="CCP: Configurable Crowd Profiles" onclick="enlargeImage(this.src, this.alt);">
                 </div>
-                <div class="col-lg-10 col-md-9 col-12">
+                <div class="col-lg-10 col-md-9 col-9">
                   <div class="pub-icons">
                     <a href="https://doi.org/10.1145/3528233.3530712" target="_blank"><i class="bx bx-file" style="font-size: 30px;"></i></a>
                     <a href="https://github.com/veupnea/CCP" target="_blank"><i class="bx bx-code-alt" style="font-size: 30px;"></i></a>
@@ -285,7 +286,60 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section><!-- End publications Section -->
+
+    <section id="projects" class="publications">
+      <div class="container" data-aos="fade">
+        <div class="section-title">
+          <h2>Projects</h2>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-stretch" style="margin-bottom: 5px;" data-aos="fade-up" data-aos-delay="50">
+            <div class="icon-box iconbox-blue">
+              <h5><a href="https://sharespace.eu/" target="_blank" style="font-weight: 600;margin-right: 10px;">SHARESPACE.eu</a></h5>              
+              <div class="row">
+                <div class="col-lg-2 col-md-3 col-3" style="margin-bottom: 5px;">
+                  <img class="img-fluid" src="assets/img/sharespace.jpg" alt="sharespace.eu">
+                </div>
+                <div class="col-lg-10 col-md-9 col-9">
+                  <div class="text-container">
+                    <div class="content hideContent">
+                      The vision of SHARESPACE is the creation of future Social Hybrid Spaces (SHS) shared by humans and avatars engaged in embodied collaborative tasks, where social sensorimotor primitives are transparently captured through mobile connected innovative sensors, and then reconstructed using novel extended reality (XR) technology. Our ambition is to create a hybrid, multimodal-multisensory integrated platform which adapts to individual users and enables them to interact in an embodied shared space by learning, identifying, and reconstructing the core sensorimotor primitives of social interactions. Through our cognitive architecture, virtual avatars will facilitate joint-action, distance-based learning, and social cohesion in the hybrid societies of the future, by reconstructing core social sensorimotor primitives into virtual ones. Our long-term vision is to expand the natural repertoire of sensorimotor interactions as we currently know it, with XR technology enriching key social features of sensorimotor communication tailored to the participants’ personal characteristics, with future deployment in sectors such as health, learning, entertainment, sport and at the workplace. In short, the project aims to bring XR to a radically, ethically sound, new level of presence and sociality by furthering the possibilities of interaction in a virtual space using avatars.
+                    </div>
+                    <div class="show-more">
+                        <a href="#" onclick="return false;">Show More</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-stretch" style="margin-bottom: 5px;" data-aos="fade-up" data-aos-delay="50">
+            <div class="icon-box iconbox-blue">
+              <h5><a href="https://www.reinherit.eu/" target="_blank" style="font-weight: 600;margin-right: 10px;">ReInHerit.eu</a></h5>              
+              <div class="row">
+                <div class="col-lg-2 col-md-3 col-3" style="margin-bottom: 5px;">
+                  <img class="img-fluid" src="assets/img/reinherit.jpg" alt="ReInHerit - Redefining the Future of Cultural Heritage">
+                </div>
+                <div class="col-lg-10 col-md-9 col-9">
+                  <div class="text-container">
+                    <div class="content hideContent">
+                      ReInHerit is an Horizon2020 project that aspires to disrupt the current status quo of communication, collaboration and innovation exchange between museums and cultural heritage sites, in a sense that it will connect cultural heritage collections and sites, and present Europe’s tangible and intangible heritage to citizens and tourists in their wider historical and geographical contexts. 
+The ReInHerit project is proposing a very innovative model of sustainable heritage management, through which a dynamic network will be born; this network comprised of cultural heritage professionals, innovation and cultural heritage solution tech experts, researchers, national museums, regional and local museums, and representative managers of Heritage Label sites. 
+ReInHerit is also supported externally, by relevant municipalities, regional and local museums, which will also enhance the communication and cooperation of the cultural heritage sector across the EU and beyond.
+                    </div>
+                    <div class="show-more">
+                        <a href="#" onclick="return false;">Show More</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- End publications Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -327,7 +381,6 @@
   <footer id="footer">
     <div class="container">
       <h3>Andreas Panayiotou</h3>
-      <p>"Do what is right, not what is easy nor what is popular."</p>
       <div class="social-links">
         <a href="mailto:a.panayiotou@cyens.org.cy" class="linkedin" target="_blank"><i class="bx bi-envelope-fill"></i></a>
         <a href="https://www.linkedin.com/in/andreas-panayiotou-cs/" class="linkedin" target="_blank"><i class="bx bi-linkedin"></i></a>
