--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <img id="profileImage" src="assets/img/profile-img.jpg" class="img-fluid" alt="Andreas Panayiotou Profile Picture" title="Andreas Panayiotou">
           </div>
           <div class="col-lg-9 col-sm-8 content">
-            <p style="text-align: justify; font-weight: 400;">
+            <p style="text-align: justify; font-weight: 400; hyphens: auto;">
               Hey. I am Andreas and I was born in Limassol, a beautiful city in Cyprus. Currently, I am a <b>PhD student</b> at <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">University of Cyprus</a> and a <b>research associate</b> at <a href="https://www.cyens.org.cy/" target="_blank">CYENS - Center of Excellence</a>. In 2022, I received my M.Sc in Computer Science from University of Cyprus, while also
               I hold a B.Sc in Computer Science from the same university.
               My interests include, but not limited to, Crowd Simulation, Machine Learning, Virtual Environments, Computer Animation and Computer Games Technologies.
@@ -238,7 +238,7 @@
                 </ul>
               </details>
             </div>
-          </div>do whaservi
+          </div>
         </div>
 
       </div>
