--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       <div class="container" data-aos="fade">
 
         <div class="section-title">
-          <h2>Publications</h2>
+          <h2>Selected Publications</h2>
         </div>
         <div class="row pubYearTitle">
           2022
