--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <div class="col-lg-6" data-aos="fade-right">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Doctor of Philosophy (Ph.D) Computer Science</h4>
+              <h4>Doctor of Philosophy (PhD) Computer Science</h4>
               <h5>Sep 2022 - Present</h5>
               <p>
                 <em>University of Cyprus (UCY), Nicosia, Cyprus</em>
@@ -182,6 +182,25 @@
           </div>
           <div class="col-lg-6" data-aos="fade-left">
             <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>Visiting PhD Student</h4>
+              <h5>Sep 2024 - Present</h5>
+              <p>
+                <em>UC Riverside | Motion Planning Lab, Riverside, California</em>
+                <a href="https://motion-lab.github.io/" target="_blank">
+                  <img src="assets/img/ucr_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt=alt="UCR Logo">
+                </a>
+              </p>
+              <details>
+                <summary class="show-more-summary">Details</summary>
+                <ul>
+                  <li>Crowd Simulation</li>
+                  <li>Generative AI</li>
+                  <li>Graph Machine Learning</li>
+                  <li>Computer Graphics</li>
+                </ul>
+              </details>
+            </div>
             <div class="resume-item">
               <h4>Research Associate</h4>
               <h5>Sep 2021 - Present</h5>
