--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                   </span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Teams/Labs:</strong> <span>
                     <a href="https://veupnea.github.io/" target="_blank">V-EUPNEA</a>,
-                    <a href="https://graphics.cs.ucy.ac.cy/" target="_blank"> UCY Graphics Lab</a>
+                    <a href="https://graphics.cs.ucy.ac.cy/" target="_blank"> UCY Graphics Lab</a>,
+                    <a href="https://motion-lab.github.io/" target="_blank"> UCR Motion Planning Lab</a>
                   </span></li>
                 </ul>
               </div>
@@ -269,9 +270,38 @@
         <div class="section-title">
           <h2>Selected Publications</h2>
         </div>
-        <div class="row pubYearTitle">
-          2022
-        </div>
+
+        <div class="row mb-3">
+          <div class="col-12 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
+            <div class="icon-box iconbox-blue">
+              <h5><a href="https://veupnea.github.io/publication_pages/eg25-cedrl.html" target="_blank" style="font-weight: 600;margin-right: 10px;">CEDRL: Simulating Diverse Crowds with Example-Driven Deep Reinforcement Learning</a></h5>              
+              <p style="text-align: justify;"><strong>Andreas Panayiotou</strong>, Andreas Aristidou, and Panayiotis Charalambous</p>
+              <p style="margin-bottom: 5px;"><i>Computer Graphics Forum, Volume 44, Issue 2., May 2025 (Eurographics '25)</i></p>
+              <div class="row">
+                <div class="col-lg-2 col-md-3 col-3" style="margin-bottom: 5px;">
+                  <img class="img-fluid paperImg" src="assets/img/cedrl.png" alt="CEDRL: Simulating Diverse Crowds with Example-Driven Deep Reinforcement Learning" onclick="enlargeImage(this.src, this.alt);">
+                </div>
+                <div class="col-lg-10 col-md-9 col-9">
+                  <div class="pub-icons">
+                    <a href="https://veupnea.github.io/publication_pages/eg25-cedrl.html" target="_blank"><i class="bx bx-file" style="font-size: 30px;"></i></a>
+                    <a href="https://github.com/veupnea/CEDRL" target="_blank"><i class="bx bx-code-alt" style="font-size: 30px;"></i></a>
+                    <a href="https://youtu.be/Z_zhc2Y5VWU" target="_blank"><i class="bx bx-camera-movie" style="font-size: 30px;"></i></a>
+                  </div>
+                  <div class="text-container">
+                    <div class="content hideContent">
+                      The level of realism in virtual crowds is strongly affected by the presence of diverse crowd behaviors. In real life, we can observe various scenarios, ranging from pedestrians moving on a shopping street, people talking in static groups, or wandering around in a public park. Most of the existing systems optimize for specific behaviors such as goal-seeking and collision avoidance, neglecting to consider other complex behaviors that are usually challenging to capture or define. Departing from the conventional use of Supervised Learning, which requires vast amounts of labeled data and often lacks controllability, we introduce Crowds using Example-driven Deep Reinforcement Learning (CEDRL), a framework that simultaneously leverages multiple crowd datasets to model a broad spectrum of human behaviors. This approach enables agents to adaptively learn and exhibit diverse behaviors, enhancing their ability to generalize decisions across unseen states. The model can be applied to populate novel virtual environments while providing real-time controllability over the agents’ behaviors. We achieve this through the design of a reward function aligned with real-world observations and by employing curriculum learning that gradually diminishes the agents’ observation space. A complexity characterization metric defines each agent’s high-level crowd behavior, linking it to the agent’s state and serving as an input to the policy network. Additionally, a parametric reward function, influenced by the type of crowd task, facilitates the learning of a diverse and abstract behavior “skill” set. We evaluate our model on both training and unseen real-world data, comparing against other simulators, showing its ability to generalize across scenarios and accurately reflect the observed complexity of behaviors. We also examine our system’s controllability by adjusting the complexity weight discovering that higher values lead to more complex behaviors such as wandering, static interactions, and group dynamics like joining or leaving. Finally, we demonstrate our model’s capabilities in novel synthetic scenarios.
+                    </div>
+                    <div class="show-more">
+                        <a href="#" onclick="return false;">Show More</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <a href="https://eg25.cs.ucl.ac.uk/" target="_blank" style="position: absolute;bottom: 5px;right: 20px;"><img src="assets/img/eg25Logo.png" width=80px alt="EUROGRAPHICS 2025 Logo"></a>
+            </div>
+          </div>
+        </div>        
+
         <div class="row">
           <div class="col-12 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
             <div class="icon-box iconbox-blue">
