--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 </div>
                 <div class="col-lg-10 col-md-9 col-9">
                   <div class="pub-icons">
-                    <a href="https://veupnea.github.io/publication_pages/eg25-cedrl.html" target="_blank"><i class="bx bx-file" style="font-size: 30px;"></i></a>
+                    <a href="https://doi.org/10.1111/cgf.70015" target="_blank"><i class="bx bx-file" style="font-size: 30px;"></i></a>
                     <a href="https://github.com/veupnea/CEDRL" target="_blank"><i class="bx bx-code-alt" style="font-size: 30px;"></i></a>
                     <a href="https://youtu.be/Z_zhc2Y5VWU" target="_blank"><i class="bx bx-camera-movie" style="font-size: 30px;"></i></a>
                   </div>
