--- a/index.html
+++ b/index.html
@@ -127,10 +127,6 @@
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container">
-        <div class="section-title">
-          <h2>Resume</h2>
-        </div>
-        <p id="cvDownload">Full CV - <a href="assets/files/Resume-Andreas_Panayiotou.pdf">Available Here</a></p>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-right">
@@ -271,7 +267,7 @@
           <h2>Selected Publications</h2>
         </div>
 
-        <div class="row mb-3">
+        <div class="row">
           <div class="col-12 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
             <div class="icon-box iconbox-blue">
               <h5><a href="https://veupnea.github.io/publication_pages/eg25-cedrl.html" target="_blank" style="font-weight: 600;margin-right: 10px;">CEDRL: Simulating Diverse Crowds with Example-Driven Deep Reinforcement Learning</a></h5>              
@@ -300,7 +296,38 @@
               <a href="https://eg25.cs.ucl.ac.uk/" target="_blank" style="position: absolute;bottom: 5px;right: 20px;"><img src="assets/img/eg25Logo.png" width=80px alt="EUROGRAPHICS 2025 Logo"></a>
             </div>
           </div>
-        </div>        
+        </div>
+
+        <div class="row">
+          <div class="col-12 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
+            <div class="icon-box iconbox-blue">
+              <h5><a href="https://marilenalemonari.github.io/MPACT/" target="_blank" style="font-weight: 600;margin-right: 10px;">MPACT: Mesoscopic Profiling and Abstraction of Crowd Trajectories</a></h5>              
+              <p style="text-align: justify;">Marilena Lemonari, <strong>Andreas Panayiotou</strong>, Theodoros Kyriakou, Nuria Pelechano, Yiorgos Chrysanthou, Andreas Aristidou, and Panayiotis Charalambous</p>
+              <p style="margin-bottom: 5px;"><i>Computer Graphics Forum</i></p>
+              <div class="row">
+                <div class="col-lg-2 col-md-3 col-3" style="margin-bottom: 5px;">
+                  <img class="img-fluid paperImg" src="assets/img/mpact.png" alt="MPACT: Mesoscopic Profiling and Abstraction of Crowd Trajectories" onclick="enlargeImage(this.src, this.alt);">
+                </div>
+                <div class="col-lg-10 col-md-9 col-9">
+                  <div class="pub-icons">
+                    <a href="https://doi.org/10.1111/cgf.70156" target="_blank"><i class="bx bx-file" style="font-size: 30px;"></i></a>
+                    <a href="https://github.com/MarilenaLemonari/MPACT" target="_blank"><i class="bx bx-code-alt" style="font-size: 30px;"></i></a>
+                    <a href="https://youtu.be/jTUMp-6b7gg" target="_blank"><i class="bx bx-camera-movie" style="font-size: 30px;"></i></a>
+                  </div>
+                  <div class="text-container">
+                    <div class="content hideContent">
+                      Simulating believable crowds for applications like movies or games is challenging due to the many components that comprise a realistic outcome. Users typically need to manually tune a large number of simulation parameters until they reach the desired results. We introduce MPACT, a framework that leverages image-based encoding to convert unlabelled crowd data into meaningful and controllable parameters for crowd generation. In essence, we train a parameter prediction network on a diverse set of synthetic data, which includes pairs of images and corresponding crowd profiles. The learned parameter space enables: (a) implicit crowd authoring and control, allowing users to define desired crowd scenarios using real-world trajectory data, and (b) crowd analysis, facilitating the identification of crowd behaviours in the input and the classification of unseen scenarios through operations within the latent space. We quantitatively and qualitatively evaluate our framework, comparing it against real-world data and selected baselines, while also conducting user studies with expert and novice users. Our experiments show that the generated crowds score high in terms of simulation believability, plausibility, and crowd behaviour faithfulness.
+                    </div>
+                    <div class="show-more">
+                        <a href="#" onclick="return false;">Show More</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <a href="https://onlinelibrary.wiley.com/journal/14678659" target="_blank" style="position: absolute;bottom: 5px;right: 20px;"><img src="assets/img/cgf.png" width=80px alt="CGF Logo"></a>
+            </div>
+          </div>
+        </div>          
 
         <div class="row">
           <div class="col-12 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
