--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
           <h2>Selected Publications</h2>
         </div>
 
-        <div class="row">
+        <div class="row mb-3">
           <div class="col-12 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
             <div class="icon-box iconbox-blue">
               <h5><a href="https://veupnea.github.io/publication_pages/eg25-cedrl.html" target="_blank" style="font-weight: 600;margin-right: 10px;">CEDRL: Simulating Diverse Crowds with Example-Driven Deep Reinforcement Learning</a></h5>              
@@ -298,12 +298,12 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row mb-3">
           <div class="col-12 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
             <div class="icon-box iconbox-blue">
               <h5><a href="https://marilenalemonari.github.io/MPACT/" target="_blank" style="font-weight: 600;margin-right: 10px;">MPACT: Mesoscopic Profiling and Abstraction of Crowd Trajectories</a></h5>              
               <p style="text-align: justify;">Marilena Lemonari, <strong>Andreas Panayiotou</strong>, Theodoros Kyriakou, Nuria Pelechano, Yiorgos Chrysanthou, Andreas Aristidou, and Panayiotis Charalambous</p>
-              <p style="margin-bottom: 5px;"><i>Computer Graphics Forum</i></p>
+              <p style="margin-bottom: 5px;"><i>Computer Graphics Forum, May 2025</i></p>
               <div class="row">
                 <div class="col-lg-2 col-md-3 col-3" style="margin-bottom: 5px;">
                   <img class="img-fluid paperImg" src="assets/img/mpact.png" alt="MPACT: Mesoscopic Profiling and Abstraction of Crowd Trajectories" onclick="enlargeImage(this.src, this.alt);">
