--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <link rel="stylesheet" href="assets/css/dark-style.css" id="css_dark" disabled>
 
   <!-- =======================================================
+  * BBASED ON:
   * Template Name: MyResume - v4.7.0
   * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
   * Author: BootstrapMade.com
@@ -68,8 +69,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="fade" data-aos-delay="50">
-      <h1>Andreas Panayiotou</h1>
-      <p>I'm <span class="typed" data-typed-items="Student, Researcher, Developer"></span></p>
+      <h1>Andreas <span class="color-text">Panayiotou</span></h1>
+      <!-- <p>I'm <span class="typed" data-typed-items="Student, Researcher, Developer"></span></p> -->
       <div class="social-links">
         <a href="mailto:a.panayiotou@cyens.org.cy" class="linkedin" target="_blank"><i class="bx bi-envelope-fill"></i></a>
         <a href="https://www.linkedin.com/in/andreas-panayiotou-cs/" class="linkedin" target="_blank"><i class="bx bi-linkedin"></i></a>
@@ -96,14 +97,13 @@
           </div>
           <div class="col-lg-9 col-sm-8 content">
             <p style="text-align: justify; font-weight: 400; hyphens: auto;">
-              Hey. I am Andreas and I was born in Limassol, a beautiful city in Cyprus. Currently, I am a <b>PhD student</b> at <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">University of Cyprus</a> and a <b>research associate</b> at <a href="https://www.cyens.org.cy/" target="_blank">CYENS - Center of Excellence</a>. In 2022, I received my M.Sc in Computer Science from University of Cyprus, while also
-              I hold a B.Sc in Computer Science from the same university.
-              My interests include, but not limited to, Crowd Simulation, Machine Learning, Virtual Environments, Computer Animation and Computer Games Technologies.
+              Hi. I'm Andreas and I was born in Limassol, a beautiful city in Cyprus. Currently, I am a <b>PhD student</b> at the <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">University of Cyprus</a> and a <b>research associate</b> at <a href="https://www.cyens.org.cy/" target="_blank">CYENS – Centre of Excellence</a>. In 2022, I earned my M.Sc in Computer Science from the University of Cyprus, where I also completed my B.Sc. in the same field.
+              My research interests include crowd simulation, machine learning, virtual environments, computer animation, and computer graphics.
             </p>
             <div class="row">
               <div class="col-lg-12">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> <span>Cyprus</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Cyprus</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:a.panayiotou@cyens.org.cy" target="_blank">a.panayiotou@cyens.org.cy</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Links:</strong> <span>
                     <a href="https://orcid.org/0000-0002-7614-1059" class="linkedin" target="_blank">ORCID</a>,
@@ -115,12 +115,16 @@
                     <a href="https://graphics.cs.ucy.ac.cy/" target="_blank"> UCY Graphics Lab</a>,
                     <a href="https://motion-lab.github.io/" target="_blank"> UCR Motion Planning Lab</a>
                   </span></li>
+                  <details>
+                    <summary class="show-more-summary">Professional Service</summary>
+                    <p><u>Reviewer:</u> SIGGRAPH, SIGGRAPH Asia, Eurographics, IEEE RA-L, CGF, The Visual Computer, CGI<br>
+                    <u>Volunteer:</u> Eurographics 2024 Conference</p>
+                  </details>
                 </ul>
               </div>
             </div>
           </div>
         </div>
-
       </div>
     </section><!-- End About Section -->
 
@@ -469,8 +473,6 @@ ReInHerit is also supported externally, by relevant municipalities, regional and
         &copy; Copyright <script>document.write(new Date().getFullYear())</script><strong><span> Andreas Panayiotou</span></strong>
         </br>
         All Rights Reserved
-      </br>
-      <a href="https://pages.github.com/" target="_blank"><b>Hosted on GitHub Pages</b></a>
       </div>
     </div>
   </footer><!-- End Footer -->
