--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </div>
           <div class="col-lg-9 col-sm-8 content">
             <p style="text-align: justify; font-weight: 400; hyphens: auto;">
-              Hi. I'm Andreas and I was born in Limassol, a beautiful city in Cyprus. Currently, I am a <b>PhD student</b> at the <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">University of Cyprus</a> and a <b>research associate</b> at <a href="https://www.cyens.org.cy/" target="_blank">CYENS – Centre of Excellence</a>. In 2022, I earned my M.Sc in Computer Science from the University of Cyprus, where I also completed my B.Sc. in the same field.
+              Hi. I'm Andreas and I was born in Limassol, a beautiful city in Cyprus. Currently, I am a <b>PhD student</b> at the <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">University of Cyprus</a> and a <b>research associate</b> at <a href="https://www.cyens.org.cy/" target="_blank">CYENS – Centre of Excellence</a>. In 2022, I earned my M.Sc in Computer Science from the University of Cyprus, where I also completed my B.Sc in the same field.
               My research interests include crowd simulation, machine learning, virtual environments, computer animation, and computer graphics.
             </p>
             <div class="row">
