--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:a.panayiotou@cyens.org.cy" target="_blank">a.panayiotou@cyens.org.cy</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Links:</strong> <span>
                     <a href="https://orcid.org/0000-0002-7614-1059" class="linkedin" target="_blank">ORCID</a>,
-                    <a href="https://scholar.google.com/citations?user=sWQRnKwAAAAJ&hl=el" class="linkedin" target="_blank">Google Scholar</a>,
+                    <a href="https://scholar.google.com/citations?user=sWQRnKwAAAAJ" class="linkedin" target="_blank">Google Scholar</a>,
                     <a href="https://www.researchgate.net/profile/Andreas-Panayiotou-7" class="linkedin" target="_blank">ResearchGate</a>,
                     <a href="https://arxiv.org/a/panayiotou_a_1.html" class="linkedin" target="_blank">arXiv</a>
                   </span></li>
