--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               </p>
               <details>
                 <summary class="show-more-summary">Details</summary>
-                    <p><u>Topic:</u> Populated Virtual Environments</p>
+                    <p><u>Topic:</u> Deep Learning for Multi-agent Simulation and Control of Crowds</p>
                     <p><u>Lab:</u> UCY Graphics Lab</p>
               </details>
             </div>
