--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                   </span></li>
                   <details>
                     <summary class="show-more-summary">Professional Service</summary>
-                    <p><u>Reviewer:</u> SIGGRAPH, SIGGRAPH Asia, Eurographics, IEEE RA-L, CGF, The Visual Computer, CGI<br>
+                    <p><u>Reviewer:</u> SIGGRAPH, SIGGRAPH Asia, Eurographics, ICRA, IEEE RA-L, CGF, The Visual Computer, CGI<br>
                     <u>Volunteer:</u> Eurographics 2024 Conference</p>
                   </details>
                 </ul>
