--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <a href="https://motion-lab.github.io/" target="_blank"> UCR Motion Planning Lab</a>
                   </span></li>
                   <details>
-                    <summary class="show-more-summary">Professional Service</summary>
+                    <summary class="show-more-summary">Academic Service</summary>
                     <p><u>Reviewer:</u> SIGGRAPH, SIGGRAPH Asia, Eurographics, ICRA, IEEE RA-L, CGF, The Visual Computer, CGI<br>
                     <u>Volunteer:</u> Eurographics 2024 Conference</p>
                   </details>
